--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F4F4F4</color>
-    <color name="colorPrimaryDark">#F4F4F4</color>
-    <color name="colorAccent">#F4F4F4</color>
+    <color name="colorPrimaryDark">#E6E6E6</color>
+    <color name="colorAccent">#000000</color>
 </resources>
