--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:text="들어와줘! 하응"
+            android:text="참여ㅊㅊ"
             android:layout_gravity="center"
             />
     </LinearLayout>
