--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -29,7 +29,7 @@
               android:id="@+id/recommend_textview"
               android:layout_width="match_parent"
               android:layout_height="40dp"
-              android:background="@drawable/title_temp"
+              android:background="@drawable/title_t"
               android:gravity="center_vertical"
               android:shadowColor="#A8A8A8"
               android:shadowDx="0"
@@ -74,7 +74,7 @@
                 android:id="@+id/today_textview"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@drawable/title_temp"
+                android:background="@drawable/title_t"
                 android:gravity="center_vertical"
                 android:shadowColor="#A8A8A8"
                 android:shadowDx="0"
