--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#F4F4F4</color>
     <color name="colorPrimaryDark">#E6E6E6</color>
     <color name="colorAccent">#000000</color>
+    <color name="black_gray">#626262</color>
 </resources>
