--- a/app/src/main/res/layout/app_information.xml
+++ b/app/src/main/res/layout/app_information.xml
@@ -19,7 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/developerInfo"
-        android:layout_margin="7dp"
-        android:layout_marginBottom="7dp"/>
+        android:layout_margin="7dp"/>
 
 </LinearLayout>
