--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,54 +119,12 @@
 
                 </android.support.v4.view.ViewPager>
 
-                <!--
-                                <ViewFlipper
-                                    android:id="@+id/flipper"
-                                    android:layout_width="fill_parent"
-                                    android:layout_height="280dp"
-                                    android:flipInterval="5000"
-                                    android:focusableInTouchMode="true">
-
-                                    <ImageView
-                                        android:id="@+id/img01"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:src="@drawable/poster1"/>
-
-                                    <ImageView
-                                        android:id="@+id/img02"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:src="@drawable/poster2"/>
-
-                                    <ImageView
-                                        android:id="@+id/img03"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:src="@drawable/poster3"/>
-
-
-                                    <ListView
-                                        android:id="@+id/flipper_list_01"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="match_parent"/>
-                                    <ListView
-                                        android:id="@+id/flipper_list_02"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="wrap_content"/>
-                                    <ListView
-                                        android:id="@+id/flipper_list_03"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="wrap_content"/>
-
-                                </ViewFlipper>
-                    -->
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/today_layout"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="300dp"
                 android:layout_below="@+id/flipper_layout"
                 android:orientation="vertical"
 
@@ -186,7 +144,7 @@
                     android:textSize="20dip"/>
 
                 <ListView
-                    android:id="@+id/today_listview"
+                    android:id="@+id/second_listview"
                     android:layout_width="fill_parent"
                     android:layout_height="250dp"
                     >
