--- a/app/src/main/res/layout/app_information.xml
+++ b/app/src/main/res/layout/app_information.xml
@@ -20,5 +20,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/developerInfo"
         android:layout_margin="7dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:layout_marginTop="7dp"/>
 
 </LinearLayout>
