--- a/app/src/main/res/layout/activitiy_mypage.xml
+++ b/app/src/main/res/layout/activitiy_mypage.xml
@@ -13,8 +13,9 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/profile"
+            android:background="@drawable/back_icon"
             android:layout_marginLeft="10dp"
+            android:onClick="clickedBackBtn"
             />
         <TextView
             android:layout_width="250dp"
@@ -99,6 +100,49 @@
             android:textSize="18dp"
             android:layout_margin="5dp"/>
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/title_t"
+        android:text="개인 설정"
+        android:gravity="center_vertical"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:textColor="#ffffff"
+        android:textSize="20dip"
+        android:paddingLeft="2dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="2dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="푸시 알림 받음"
+                android:textSize="18dp"
+                android:layout_margin="5dp"
+                android:layout_alignParentLeft="true"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:id="@+id/permissonPushAlarm"
+                android:onClick="clickedPermissionPushAlarmCb"
+                />
+        </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="항목 2"
+            android:textSize="18dp"
+            android:layout_margin="5dp"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -138,4 +182,6 @@
             android:layout_margin="5dp"
             android:id="@+id/appinfo"/>
     </LinearLayout>
+
+
 </LinearLayout>
