--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
                     android:shadowDy="0"
                     android:shadowRadius="5"
                     android:textColor="#ffffff"
-                    android:text=" First category"
+                    android:text=" 최신 공모전/대회"
 
                     android:textSize="20dip"/>
 
@@ -124,13 +124,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/today_layout"
+                android:id="@+id/second_layout"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_below="@+id/flipper_layout"
                 android:orientation="vertical"
 
                 >
+
                 <TextView
                     android:id="@+id/today_textview"
                     android:layout_width="match_parent"
@@ -143,7 +144,7 @@
                     android:shadowRadius="5"
                     android:textColor="#ffffff"
                     android:textSize="20dip"
-                    android:text=" Second category"
+                    android:text=" 최신 장학금 지원"
                     />
 
                 <ListView
@@ -154,6 +155,40 @@
                 </ListView>
 
             </LinearLayout>
+
+<!-- <LinearLayout
+                android:id="@+id/second_layout"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@+id/flipper_layout"
+                android:orientation="vertical"
+
+                >
+
+                <TextView
+                    android:id="@+id/today_textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@drawable/title_t"
+                    android:gravity="center_vertical"
+                    android:shadowColor="#A8A8A8"
+                    android:shadowDx="0"
+                    android:shadowDy="0"
+                    android:shadowRadius="5"
+                    android:textColor="#ffffff"
+                    android:textSize="20dip"
+                    android:text=" 커뮤니티 인기 글"
+                    />
+
+                <ListView
+                    android:id="@+id/second_listview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="250dp"
+                    >
+                </ListView>
+
+            </LinearLayout>
+            -->
 
 
 
