--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-
+    android:paddingTop="6dp"
+    android:paddingBottom="6dp"
     >
     <!--
     <ImageView
@@ -12,10 +13,20 @@
         android:layout_height="60dp"/>
         -->
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:gravity = "center"
         android:id="@+id/list_text"
+        android:layout_gravity="left"
+        android:textSize="18dp"
+        />
+    <TextView
+        android:textAlignment="center"
+        android:layout_width="260dp"
+        android:layout_height="match_parent"
+        android:gravity = "center"
+        android:id="@+id/list_context"
+        android:textSize="18dp"
         />
 
 </LinearLayout>
