--- a/app/src/main/res/layout/activitiy_mypage.xml
+++ b/app/src/main/res/layout/activitiy_mypage.xml
@@ -15,6 +15,7 @@
             android:layout_height="40dp"
             android:background="@drawable/profile"
             android:layout_marginLeft="10dp"
+            android:onClick="clickedBackBtn"
             />
         <TextView
             android:layout_width="250dp"
@@ -99,8 +100,7 @@
             android:textSize="18dp"
             android:layout_margin="5dp"/>
     </LinearLayout>
-<<<<<<< HEAD
-=======
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
