--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 android:background="@drawable/search"
                 android:layout_marginRight="10dp"
                 android:onClick="clickedHomepage"
-                />
+              />
 
         </LinearLayout>
         <LinearLayout
@@ -111,7 +111,6 @@
                     android:shadowRadius="5"
                     android:textColor="#ffffff"
                     android:text=" 최신 공모전/대회"
-
                     android:textSize="20dip"/>
 
                 <android.support.v4.view.ViewPager
@@ -144,7 +143,6 @@
                     android:shadowRadius="5"
                     android:textColor="#ffffff"
                     android:textSize="20dip"
-<<<<<<< HEAD
                     android:text=" 최신 장학금 지원"
                     />
 
@@ -179,6 +177,7 @@
                     android:textColor="#ffffff"
                     android:textSize="20dip"
                     android:text=" 커뮤니티 인기 글"
+                    android:text=" 장학금 정보"
                     />
 
                 <ListView
