--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,28 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:orientation="vertical"
-            android:background="@color/colorPrimary"
-            >
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:src="@drawable/logo2"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="컴퓨터공학도들의 공간"
-                android:textSize="20dp"
-                />
 
-            </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -44,8 +23,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:text="최강 컴공들의 모임에 오신 것을 환영합니다."
+                android:textSize = "23dp"
+                android:text="회원가입"
                 android:layout_gravity="center"
+                android:layout_marginBottom="30dp"
                 />
             <EditText
                 android:layout_width = "280dp"
@@ -78,24 +59,58 @@
                 android:background="@color/colorPrimary"
                 android:drawablePadding="10dp"
                 />
+            <EditText
+                android:layout_width = "280dp"
+                android:layout_height = "wrap_content"
+                android:hint="이메일"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"
+                android:textColor = "#000000"
+                android:textColorHint="#A9A9A9"
+                android:id="@+id/emailText"
+                android:drawableStart="@drawable/email"
+                android:drawableLeft="@drawable/email"
+                android:drawablePadding="10dp"
+                android:background="@color/colorPrimary"
+                />
+            <EditText
+                android:layout_width = "280dp"
+                android:layout_height = "wrap_content"
+                android:hint="학교"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"
+                android:textColor = "#000000"
+                android:textColorHint="#A9A9A9"
+                android:id="@+id/school"
+                android:drawableStart="@drawable/school"
+                android:drawableLeft="@drawable/school"
+                android:drawablePadding="10dp"
+                android:background="@color/colorPrimary"
+                />
+            <EditText
+                android:layout_width = "280dp"
+                android:layout_height = "wrap_content"
+                android:hint="학과"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"
+                android:textColor = "#000000"
+                android:textColorHint="#A9A9A9"
+                android:id="@+id/major"
+                android:drawableStart="@drawable/major"
+                android:drawableLeft="@drawable/major"
+                android:drawablePadding="10dp"
+                android:background="@color/colorPrimary"
+                />
             <Button
-                android:id="@+id/enter_btn"
+                android:id="@+id/signup_btn"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:text="참여"
+                android:layout_marginTop="50dp"
+                android:text="가입하기"
                 android:layout_gravity="center"
-                />
-            <TextView
-                android:id="@+id/signup_btn"
-                android:paddingTop="30dp"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:textAlignment="center"
-                android:text="회원가입"
-                android:layout_gravity="center"
-                android:onClick="signup_btn"
-                android:clickable="true"
                 />
 
         </LinearLayout>
