--- a/app/src/main/res/layout/activitiy_mypage.xml
+++ b/app/src/main/res/layout/activitiy_mypage.xml
@@ -9,6 +9,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp"
         android:gravity="center"
+        android:orientation="horizontal"
         >
         <ImageView
             android:layout_width="40dp"
@@ -135,6 +136,7 @@
                 android:layout_alignParentRight="true"
                 android:id="@+id/permissonPushAlarm"
                 android:onClick="clickedPermissionPushAlarmCb"
+                android:checked="true"
                 />
         </RelativeLayout>
         <TextView
