--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -279,7 +279,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Computer Systems Engineering"
+                    android:text="Computer Science Engineering"
                     android:textSize="15dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="5dp"
