--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,8 @@
     android:orientation="horizontal"
     android:paddingTop="6dp"
     android:paddingBottom="6dp"
+    android:paddingRight="6dp"
+    android:paddingLeft="6dp"
     >
     <!--
     <ImageView
@@ -20,6 +22,7 @@
         android:layout_gravity="left"
         android:textSize="18dp"
         />
+
     <TextView
         android:textAlignment="center"
         android:layout_width="260dp"
@@ -27,6 +30,8 @@
         android:gravity = "center"
         android:id="@+id/list_context"
         android:textSize="18dp"
+        android:paddingRight="6dp"
+
         />
 
 </LinearLayout>
