--- a/app/src/main/res/layout/activitiy_mypage.xml
+++ b/app/src/main/res/layout/activitiy_mypage.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/profile"
+            android:background="@drawable/back_icon"
             android:layout_marginLeft="10dp"
             android:onClick="clickedBackBtn"
             />
